--- a/Phase2/package.json
+++ b/Phase2/package.json
@@ -1,7 +1,6 @@
 {
   "name": "phase2",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,5 +16,7 @@
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
