--- a/Phase2/package.json
+++ b/Phase2/package.json
@@ -11,12 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "connect-mongodb-session": "^5.0.0",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
+    "express-session": "^1.18.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   },
-  "devDependencies": {},
   "description": ""
 }
